add spanish dictionary

--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
+
 <body>
 
 
-	<header>
-		<h1>Language Breach</h1>
-	</header>
+  <header>
+    <h1>Language Breach</h1>
+  </header>
 
 
-	<select>
+  <select>
 		<option value="spanish">Spanish</option>
 		<option value="french">French</option>
 		<option value="portugese">Portugese</option>
 		<option value="german">German</option>
 	</select>
-	<br><br>
+  <br><br>
 
-	<textarea>
+  <textarea>
 
 	</textarea>
 
-	<br>
+  <br>
 
-	<input type="button" id="submitButton" value="Translate">
+  <input type="button" id="submitButton" value="Translate">
 
-	<hr>
+  <hr>
 
-	<div id="output"></div>
+  <div id="output"></div>
 
 
-<script type="text/javascript" src="javascripts/main.js"></script>
+  <script type="text/javascript" src="javascripts/main.js"></script>
+  <script type="text/javascript" src="./javascripts/spanish.js"></script>
 </body>
+
 </html>
