--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 
 	<select>
-		<option value="spanish">Spanish</option>
-		<option value="french">French</option>
-		<option value="portugese">Portugese</option>
-		<option value="german">German</option>
+		<option id="spanish" value="spanish">Spanish</option>
+		<option id="french" value="french">French</option>
+		<option id="portuguese" value="portugese">Portugese</option>
+		<option id="german" value="german">German</option>
 	</select>
 	<br><br>
 
