--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
   <br><br>
 
   <textarea>
-
 	</textarea>
 
   <br>
 
-  <input type="button" id="submitButton" value="Translate">
+  <input id="submitButton" type="button" value="Translate">
 
   <hr>
 
