Got it working.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
   </header>
 
 
-	<select>
+	<select id="selectField">
 		<option id="spanish" value="spanish">Spanish</option>
 		<option id="french" value="french">French</option>
-		<option id="portuguese" value="portugese">Portugese</option>
+		<option id="portuguese" value="portuguese">Portuguese</option>
 		<option id="german" value="german">German</option>
 	</select>
   <br><br>
-
-  <textarea>
-	</textarea>
+  Gimme a word: <br>
+  <input id="userText" type="text" name="Input">
 
   <br>
 
@@ -33,8 +32,11 @@
   <div id="output"></div>
 
 
-  <script type="text/javascript" src="javascripts/main.js"></script>
-  <script type="text/javascript" src="./javascripts/spanish.js"></script>
+<script type="text/javascript" src="javascripts/main.js"></script>
+<script type="text/javascript" src="javascripts/spanish.js"></script>
+<script type="text/javascript" src="javascripts/french.js"></script>
+<script type="text/javascript" src="javascripts/portuguese.js"></script>
+<script type="text/javascript" src="javascripts/german.js"></script>
 </body>
 
 </html>
