--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <div id="inputWrap">
   	<select id="selectField1">
+      <option value="english">English</option>
   		<option value="spanish">Spanish</option>
   		<option value="french">French</option>
   		<option value="portuguese">Portuguese</option>
