--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     		<option value="portuguese">Portuguese</option>
     		<option value="german">German</option>
     	</select>
-      <h4>Gimme a word:</h4>
-      <textarea id="userText"></textarea>
+      <h4>Gimme a Word:</h4>
+      <textarea id="userText" rows="3" cols="20"></textarea>
+    </div>
+
+    <div id="translate-button">
+      <input id="submitButton" type="button" value="Translate">
     </div>
 
     <div class="child">
@@ -37,11 +41,10 @@
         <option value="german">German</option>
       </select>
       <h4>Translation:</h4>
-      <textarea id="output"></textarea>
+      <textarea id="output" rows="3" cols="20"></textarea>
     </div>
   </div>
 
-  <input id="submitButton" type="button" value="Translate">
 
 
 <script type="text/javascript" src="javascripts/main.js"></script>
